kubernetes/apps/default/qbittorrent/app/networkpolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "qbittorrent-allow-egress-cluster"
  annotations:
    future-me-why: "allow egress to cluster for all endpoints, which also puts pod in deny-by-default mode for egress; must use stealth-gateway"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
  egress:
  - toEntities:
    - "cluster"
